--- a/.github/workflows/check-subscriptions.yml
+++ b/.github/workflows/check-subscriptions.yml
@@ -2,7 +2,8 @@ name: Check Subscription Expirations
 
 on:
   schedule:
-    - cron: '30 0 * * *'  
+    - cron: '0 19 * * 4'
+    - cron: '0 7 * * 5'
   workflow_dispatch:  # Allows manual triggering from the GitHub UI
 
 jobs:
