--- a/.github/workflows/check-subscriptions.yml
+++ b/.github/workflows/check-subscriptions.yml
@@ -178,7 +178,7 @@ jobs:
                     notification: {
                       channelId: 'default',
                       sound: 'default',
-                      image: 'https://images.unsplash.com/photo-1558002038-1055907df827?w=800&auto=format&fit=crop',
+                      image: 'https://raw.githubusercontent.com/louamlemjid/robotx-scheduler/main/assets/expirationIcon.png',
                     },
                   },
                 },
